<resources>
    <string name="app_name">Wire It Up</string>
    <string name="EnterIcon">Enter Icon :</string>
    <string name="EnterUserName">Enter UserName :</string>
    <string name="Save">Save</string>
    <string name="Scoretable">Score table</string>
    <string name="name">Name</string>
    <string name="score">Score</string>
    <string name="newp">New Player</string>
    <string name="ex_play">Existing Player</string>
    <string name="u_ex">This username already exists</string>
    <string name="no_name">Please enter the username</string>
    <string name="no_play">Please choose a player</string>
    <string name="chose_play">Choose a player:</string>
    <string name="step_num">Steps:</string>
    <string name="level">"Level "</string>
    <string name="level1">"Level 1"</string>
    <string name="level2">"Level 2"</string>
    <string name="level3">"Level 3"</string>
    <string name="level4">"Level 4"</string>
    <string name="level5">"Level 5"</string>
    <string name="level6">"Level 6"</string>
    <string name="level7">"Level 7"</string>
    <string name="level8">"Level 8"</string>
    <string name="level9">"Level 9"</string>
    <string name="restart">Do You Want To Restart Level Or Go Back?</string>
    <string name="outoftime">Out Of Time!</string>
    <string name="row">row</string>
    <string name="col">col</string>
    <string name="shape">shape</string>
    <string name="cong">Congratulations!</string>
    <string name="next">You Have Completed The Level</string>
    <string name="play">Play</string>
    <string name="yourscore">Your Score Is:</string>
    <string name="theplayer">The chosen player is :</string>
    <string name="fin">You\'ve Finished All The Levels</string>
    <string name="did">You Did It!</string>
</resources>
