<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/dialogback"
    android:padding="10dp"
    android:layoutDirection="ltr"

    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cong"
        android:textColor="@color/blue"
        android:id="@+id/success"
        android:gravity="center"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="35sp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_below="@id/success"
        android:background="@color/blue"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/success"
        android:text="@string/next"
        android:textColor="@color/blue"
        android:id="@+id/completed"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/completed"
        android:text="@string/yourscore"
        android:textColor="@color/blue"
        android:id="@+id/points"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_green"
        android:layout_below="@id/points"
        android:id="@+id/next"
        android:foregroundGravity="center"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:rotation="180"
        android:foreground="@drawable/ic_arrow_back_green_24dp"
        />




</RelativeLayout>