<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/dialogback"
    android:padding="10dp"
    android:layoutDirection="ltr"
    android:id="@+id/layout_final"

    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/did"
        android:textColor="@color/blue"
        android:layout_centerHorizontal="true"
        android:id="@+id/success"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="40sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/success"
        android:orientation="horizontal"
        android:id="@+id/stars"
        android:layout_centerHorizontal="true"
        >

        <ImageView
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:src="@drawable/stars"/>
        <ImageView
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:src="@drawable/stars"/>


    </LinearLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/stars"
        android:text="@string/fin"
        android:textColor="@color/blue"
        android:id="@+id/completed"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/completed"
        android:text="@string/yourscore"
        android:textColor="@color/blue"
        android:id="@+id/points"
        android:gravity="center"
        android:layout_marginBottom="15dp"
        android:textSize="20sp"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_green"
        android:layout_below="@id/points"
        android:id="@+id/next"
        android:foregroundGravity="center"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:rotation="180"
        android:foreground="@drawable/ic_arrow_back_green_24dp"
        />




</RelativeLayout>